force-app/main/default/objects/Enrollment__c/Enrollment__c.object-meta.xml
<CustomObject>
    <label>Enrollment</label>
    <nameField>
        <displayFormat>WR-{0000000}</displayFormat>
        <label>Warranty Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Enrollments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>