force-app/main/default/objects/Enrollment__c/fields/Agency_Matching_Method__c.field-meta.xml
<CustomField>
    <fullName>Agency_Matching_Method__c</fullName>
    <label>Agency Matching Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CCMID</fullName>
            </value>
            <value>
                <fullName>Address &amp; Zipcode</fullName>
            </value>
            <value>
                <fullName>New Record Created</fullName>
            </value>
            <value>
                <fullName>Via Agent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>