force-app/main/default/objects/Enrollment__c/fields/Agency_Office__c.field-meta.xml
<CustomField>
    <fullName>Agency_Office__c</fullName>
    <label>Agency / Office</label>
    <length>100</length>
    <type>Text</type>
</CustomField>