force-app/main/default/objects/Enrollment__c/fields/Agency_or_Agent_is_CCMID__c.field-meta.xml
<CustomField>
    <fullName>Agency_or_Agent_is_CCMID__c</fullName>
    <formula>OR(CONTAINS(Agency__r.Name, &apos;CCMID&apos;), CONTAINS(Agent__r.LastName, &apos;CCMID&apos;))</formula>
    <label>Agency or Agent is CCMID</label>
    <type>Checkbox</type>
</CustomField>