force-app/main/default/objects/Enrollment__c/fields/Agent_CCMID_Match__c.field-meta.xml
<CustomField>
    <fullName>Agent_CCMID_Match__c</fullName>
    <formula>Agent_Last_Name__c &amp; Agent_First_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agent CCMID Match</label>
    <type>Text</type>
</CustomField>