force-app/main/default/objects/Enrollment__c/fields/Agent_Matching_Method__c.field-meta.xml
<CustomField>
    <fullName>Agent_Matching_Method__c</fullName>
    <label>Agent Matching Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CCMID</fullName>
            </value>
            <value>
                <fullName>Last Name &amp; Address</fullName>
            </value>
            <value>
                <fullName>New Record Created</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>