force-app/main/default/objects/Enrollment__c/fields/Agent_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Agent_Zip_Code__c</fullName>
    <label>Agent Zip Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>