force-app/main/default/objects/Enrollment__c/fields/Base_year_zero_contract_value__c.field-meta.xml
<CustomField>
    <fullName>Base_year_zero_contract_value__c</fullName>
    <label>Base year zero contract value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>