force-app/main/default/objects/Enrollment__c/fields/Buyer_Date_Ordered__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Date_Ordered__c</fullName>
    <label>Buyer Date Ordered</label>
    <type>Date</type>
</CustomField>