force-app/main/default/objects/Enrollment__c/fields/Buyer_Date_Ordered_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Date_Ordered_Date_Time__c</fullName>
    <label>Buyer Date Ordered Date/Time</label>
    <type>DateTime</type>
</CustomField>