force-app/main/default/objects/Enrollment__c/fields/BUYER_FIRST_NAME__c.field-meta.xml
<CustomField>
    <fullName>BUYER_FIRST_NAME__c</fullName>
    <label>BUYER FIRST NAME</label>
    <length>100</length>
    <type>Text</type>
</CustomField>