force-app/main/default/objects/Enrollment__c/fields/Buyer_Name_Populated__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Name_Populated__c</fullName>
    <label>Buyer Name Populated</label>
    <type>DateTime</type>
</CustomField>