force-app/main/default/objects/Enrollment__c/fields/CCMID_Match__c.field-meta.xml
<CustomField>
    <fullName>CCMID_Match__c</fullName>
    <description>Checks if Enrollment was matched to either the CCMID Agent or Office or both</description>
    <formula>IF(AND(CONTAINS(Agency__r.Name , &apos;CCMID&apos;), CONTAINS(Agent__r.LastName, &apos;CCMID&apos;)), &apos;CCMID Agency &amp; Agent&apos;,
IF(CONTAINS(Agency__r.Name, &apos;CCMID&apos;), &apos;CCMID Agency&apos;,
IF(CONTAINS(Agent__r.LastName, &apos;CCMID&apos;), &apos;CCMID Agent&apos;, &apos;&apos;)))</formula>
    <inlineHelpText>Checks if Enrollment was matched to either the CCMID Agent or Office or both</inlineHelpText>
    <label>CCMID Match</label>
    <type>Text</type>
</CustomField>