force-app/main/default/objects/Enrollment__c/fields/CCMID_of_Agency_formula__c.field-meta.xml
<CustomField>
    <fullName>CCMID_of_Agency_formula__c</fullName>
    <formula>Agency__r.CCMID__c</formula>
    <inlineHelpText>Pulled in from Agency</inlineHelpText>
    <label>CCMID of Agency (f)</label>
    <type>Text</type>
</CustomField>