force-app/main/default/objects/Enrollment__c/fields/CCMID_of_Agent__c.field-meta.xml
<CustomField>
    <fullName>CCMID_of_Agent__c</fullName>
    <label>CCMID of Agent (on import)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>