force-app/main/default/objects/Enrollment__c/fields/CCMID_of_Agent_formula__c.field-meta.xml
<CustomField>
    <fullName>CCMID_of_Agent_formula__c</fullName>
    <formula>Agent__r.CCMID__c</formula>
    <inlineHelpText>Pulled in from Agent</inlineHelpText>
    <label>CCMID of Agent (f)</label>
    <type>Text</type>
</CustomField>