force-app/main/default/objects/Enrollment__c/fields/Exclude_from_Processing__c.field-meta.xml
<CustomField>
    <fullName>Exclude_from_Processing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If an error can&apos;t be handled automatically, exclude record from re-processing</description>
    <inlineHelpText>If an error can&apos;t be handled automatically, exclude record from re-processing</inlineHelpText>
    <label>Exclude from Processing</label>
    <type>Checkbox</type>
</CustomField>