force-app/main/default/objects/Enrollment__c/fields/Failure_Count__c.field-meta.xml
<CustomField>
    <fullName>Failure_Count__c</fullName>
    <description>Used by EnrollmentRoundup batch job</description>
    <inlineHelpText>Used by EnrollmentRoundup batch job</inlineHelpText>
    <label>Failure Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>