force-app/main/default/objects/Enrollment__c/fields/Failure_Message__c.field-meta.xml
<CustomField>
    <fullName>Failure_Message__c</fullName>
    <label>Failure Message</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>