force-app/main/default/objects/Enrollment__c/fields/NAME_FIRST__c.field-meta.xml
<CustomField>
    <fullName>NAME_FIRST__c</fullName>
    <label>NAME_FIRST</label>
    <length>100</length>
    <type>Text</type>
</CustomField>