force-app/main/default/objects/Enrollment__c/fields/NAME_LAST__c.field-meta.xml
<CustomField>
    <fullName>NAME_LAST__c</fullName>
    <label>NAME_LAST</label>
    <length>100</length>
    <type>Text</type>
</CustomField>