force-app/main/default/objects/Enrollment__c/fields/Options_Added_AC_Heat__c.field-meta.xml
<CustomField>
    <fullName>Options_Added_AC_Heat__c</fullName>
    <label>Options Added: A/C Heat</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>