force-app/main/default/objects/Enrollment__c/fields/Pick_up_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Pick_up_Date_Time__c</fullName>
    <description>Used by EnrollmentRoundup job for mass-handling of account/contact inserts</description>
    <inlineHelpText>Used by EnrollmentRoundup job for mass-handling of account/contact inserts</inlineHelpText>
    <label>Pick-up Date/Time</label>
    <type>DateTime</type>
</CustomField>