force-app/main/default/objects/Enrollment__c/fields/PRPTY_ADDR1__c.field-meta.xml
<CustomField>
    <fullName>PRPTY_ADDR1__c</fullName>
    <label>PRPTY_ADDR1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>