force-app/main/default/objects/Enrollment__c/fields/PRPTY_CITY__c.field-meta.xml
<CustomField>
    <fullName>PRPTY_CITY__c</fullName>
    <label>PRPTY_CITY</label>
    <length>100</length>
    <type>Text</type>
</CustomField>