force-app/main/default/objects/Enrollment__c/fields/PRPTY_ZIP_CODE__c.field-meta.xml
<CustomField>
    <fullName>PRPTY_ZIP_CODE__c</fullName>
    <label>PRPTY_ZIP_CODE</label>
    <length>100</length>
    <type>Text</type>
</CustomField>