force-app/main/default/objects/Enrollment__c/fields/Seller_Date_Ordered__c.field-meta.xml
<CustomField>
    <fullName>Seller_Date_Ordered__c</fullName>
    <label>Seller Date Ordered</label>
    <type>Date</type>
</CustomField>