force-app/main/default/objects/Enrollment__c/fields/Seller_Date_Ordered_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Seller_Date_Ordered_Date_Time__c</fullName>
    <label>Seller Date Ordered Date/Time</label>
    <type>DateTime</type>
</CustomField>