force-app/main/default/objects/Enrollment__c/fields/SELLER_FIRST_NAME__c.field-meta.xml
<CustomField>
    <fullName>SELLER_FIRST_NAME__c</fullName>
    <label>SELLER FIRST NAME</label>
    <length>100</length>
    <type>Text</type>
</CustomField>