force-app/main/default/objects/Enrollment__c/fields/Seller_Name_Populated__c.field-meta.xml
<CustomField>
    <fullName>Seller_Name_Populated__c</fullName>
    <label>Seller Name Populated</label>
    <type>DateTime</type>
</CustomField>