force-app/main/default/objects/Enrollment__c/fields/Warranty_Number__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Number__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Warranty Number</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>