force-app/main/default/objects/Enrollment__c/fields/Warranty_Type__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Type__c</fullName>
    <label>Warranty Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BCW</fullName>
            </value>
            <value>
                <fullName>BDW</fullName>
            </value>
            <value>
                <fullName>NHW</fullName>
            </value>
            <value>
                <fullName>ODW</fullName>
            </value>
            <value>
                <fullName>SHW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>