force-app/main/default/objects/Enrollment__c/fields/Year_zero_total_options_value__c.field-meta.xml
<CustomField>
    <fullName>Year_zero_total_options_value__c</fullName>
    <label>Year zero total options value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>