force-app/main/default/objects/Enrollment__c/listViews/Agency_Matching_blank.listView-meta.xml
<ListView>
    <fullName>Agency_Matching_blank</fullName>
    <columns>NAME</columns>
    <columns>Agency_or_Agent_is_CCMID__c</columns>
    <columns>Agency_Matching_Method__c</columns>
    <columns>Agent_Matching_Method__c</columns>
    <columns>Status__c</columns>
    <columns>Agency_Office__c</columns>
    <columns>Agent_Last_Name__c</columns>
    <columns>Agent__c</columns>
    <columns>Agency__c</columns>
    <columns>Agent_Address__c</columns>
    <columns>Agent_Zip_Code__c</columns>
    <columns>Failure_Count__c</columns>
    <columns>Failure_Message__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Agency_Matching_Method__c</field>
        <operation>equals</operation>
    </filters>
    <label>Agency Matching: blank</label>
</ListView>