force-app/main/default/objects/Enrollment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Warranty_Number__c</columns>
    <columns>Agency_or_Agent_is_CCMID__c</columns>
    <columns>Agency_Matching_Method__c</columns>
    <columns>Agent_Matching_Method__c</columns>
    <columns>Date_Ordered__c</columns>
    <columns>CCMID_of_Agent__c</columns>
    <columns>CCMID_of_Agent_formula__c</columns>
    <columns>Status__c</columns>
    <columns>Agency_Office__c</columns>
    <columns>Agent__c</columns>
    <columns>Agent_Last_Name__c</columns>
    <columns>Agency__c</columns>
    <columns>Agent_Address__c</columns>
    <columns>Agent_Zip_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>