force-app/main/default/objects/Enrollment__c/listViews/CCMID_Agent.listView-meta.xml
<ListView>
    <fullName>CCMID_Agent</fullName>
    <columns>NAME</columns>
    <columns>Date_Closed__c</columns>
    <columns>CCMID_of_Agent__c</columns>
    <columns>Agency__c</columns>
    <columns>Agent__c</columns>
    <columns>Agent_First_Name__c</columns>
    <columns>Agent_Last_Name__c</columns>
    <columns>Agent_Address__c</columns>
    <columns>Agent_Zip_Code__c</columns>
    <columns>NAME_FIRST__c</columns>
    <columns>NAME_LAST__c</columns>
    <columns>Agent_CCMID_Match__c</columns>
    <columns>Agency_or_Agent_is_CCMID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CCMID_Match__c</field>
        <operation>equals</operation>
        <value>CCMID Agent</value>
    </filters>
    <label>CCMID - Agent</label>
</ListView>