force-app/main/default/objects/Enrollment__c/listViews/Enrollments_Created_Today.listView-meta.xml
<ListView>
    <fullName>Enrollments_Created_Today</fullName>
    <columns>NAME</columns>
    <columns>Agency__c</columns>
    <columns>Agent__c</columns>
    <columns>Agent_CCMID_Match__c</columns>
    <columns>Agent_First_Name__c</columns>
    <columns>Agent_Last_Name__c</columns>
    <columns>CCMID_of_Agency__c</columns>
    <columns>CCMID_of_Agent__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>7/21/2020 12:00 AM</value>
    </filters>
    <label>Enrollments Created Today</label>
</ListView>