force-app/main/default/objects/Enrollment__c/listViews/Enrollments_w_o_Agent_Agency.listView-meta.xml
<ListView>
    <fullName>Enrollments_w_o_Agent_Agency</fullName>
    <columns>NAME</columns>
    <columns>Agency__c</columns>
    <columns>Agent__c</columns>
    <columns>Agent_CCMID_Match__c</columns>
    <columns>Agent_First_Name__c</columns>
    <columns>Agent_Last_Name__c</columns>
    <columns>CCMID_of_Agency__c</columns>
    <columns>CCMID_of_Agent__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Agent__c</field>
        <operation>equals</operation>
    </filters>
    <label>Enrollments w/o Agent/Agency</label>
</ListView>